--- a/app/src/main/res/layout/activity_touch.xml
+++ b/app/src/main/res/layout/activity_touch.xml
@@ -15,6 +15,6 @@
         android:layout_marginLeft="129dp"
         android:layout_marginTop="272dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/link" />
+        android:src="@drawable/pikachu" />
 
 </RelativeLayout>
