--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         app:chipIcon = "@drawable/outline_fitness_center_24"
         app:chipIconVisible="true"
+        android:checkable="true"
         android:text="Sport" />
 
     <com.google.android.material.chip.Chip
@@ -49,6 +50,7 @@
         app:chipIcon = "@drawable/outline_drive_eta_24"
         app:chipIconVisible="true"
         android:text="Transportation"
+        android:checkable="true"
         app:layout_constraintLeft_toRightOf="@id/sport_chip"
         app:layout_constraintTop_toBottomOf="@id/text_prompt" />
 
@@ -59,6 +61,7 @@
         app:chipIcon = "@drawable/outline_auto_stories_24"
         app:chipIconVisible="true"
         android:text="Academic"
+        android:checkable="true"
         app:layout_constraintLeft_toRightOf="@id/trans_chip"
         app:layout_constraintTop_toBottomOf="@id/text_prompt" />
 
@@ -68,6 +71,7 @@
         android:layout_height="wrap_content"
         app:chipIcon = "@drawable/outline_attractions_24"
         app:chipIconVisible="true"
+        android:checkable="true"
         android:text="Entertainment" />
 
     </com.google.android.material.chip.ChipGroup>
@@ -98,6 +102,7 @@
         app:layout_constraintLeft_toLeftOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/title_textbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/title_input_label"
@@ -117,6 +122,7 @@
         app:layout_constraintLeft_toLeftOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/content_textbox"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:hint="@string/description_input_label"
