--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,24 +1,12 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <FrameLayout
-        android:id="@+id/sky"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.61"
-        android:background="@color/blue_sky">
-        <ImageView
-            android:id="@+id/sun"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/sun" />
-    </FrameLayout>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <View
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.39"
-        android:background="@color/sea" />
-</LinearLayout>
+        android:layout_height="match_parent" />
+
+</RelativeLayout>
