--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-black"
             app:layout_constraintTop_toBottomOf="@id/place_image"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -45,6 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:chipIconVisible="true"
+                android:clickable="false"
                 android:checkable="false"/>
 
         </com.google.android.material.chip.ChipGroup>
@@ -63,14 +64,27 @@
             />
 
         <TextView
+            android:id="@+id/description_prompt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Descripition"
+            android:textSize="25sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="sans-serif-black"
+            app:layout_constraintTop_toBottomOf="@id/location_text"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
+        <TextView
             android:id="@+id/descriptionField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif-black"
-            app:layout_constraintTop_toBottomOf="@id/location_text"
+            android:fontFamily="sans-serif"
+            app:layout_constraintTop_toBottomOf="@id/description_prompt"
             app:layout_constraintLeft_toLeftOf="parent"
             />
 
@@ -86,6 +100,19 @@
             app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
+            android:id="@+id/contact_prompt"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="sans-serif-black"
+            app:layout_constraintTop_toBottomOf="@id/button_join"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
+        <TextView
             android:id="@+id/contactInfo"
             android:visibility="invisible"
             android:layout_width="match_parent"
@@ -93,8 +120,8 @@
             android:textSize="25sp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif-black"
-            app:layout_constraintTop_toBottomOf="@id/button_join"
+            android:fontFamily="sans-serif"
+            app:layout_constraintTop_toBottomOf="@id/contact_prompt"
             app:layout_constraintLeft_toLeftOf="parent"
             />
 
