--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -10,14 +10,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <com.android.volley.toolbox.NetworkImageView
-            android:id="@+id/product_image"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/card_image_height"
-            android:background="?attr/colorPrimaryDark"
-            android:scaleType="centerCrop" />
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/purple_200"
+        android:baselineAligned="true"
+        android:clickable="true"
+        android:orientation="vertical"
+        android:paddingLeft="4dp"
+        android:paddingTop="16dp"
+        android:paddingRight="4dp"
+        android:paddingBottom="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,14 +30,14 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/product_title"
+                android:id="@+id/post_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="title"
                 android:textAppearance="?attr/textAppearanceHeadline6" />
 
             <TextView
-                android:id="@+id/product_price"
+                android:id="@+id/post_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="description"
