--- a/app/src/main/res/layout/recyclerview_postlayout.xml
+++ b/app/src/main/res/layout/recyclerview_postlayout.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/post_item_margin">
+        android:layout_margin="@dimen/card_image_height">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
