--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="card_image_height">108dp</dimen>
     <dimen name="grid_spacing">16dp</dimen>
     <dimen name="grid_spacing_small">4dp</dimen>
+    <dimen name="post_item_margin">10dp</dimen>
 </resources>
