--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -22,10 +22,9 @@
         app:layout_constraintVertical_bias="0.06" />
 
     <Button
-        android:id="@+id/log_out_button"
+        android:id="@+id/log_out_button_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="logout"
         android:text="Log out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +109,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/post_item_margin"
-        app:layout_constraintBottom_toTopOf="@+id/log_out_button"
+        app:layout_constraintBottom_toTopOf="@+id/log_out_button_fragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nickName_text"
