--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,8 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
-        android:text="Pal finder"
-        android:textColor="@color/black"
+        android:text="Pal Finder"
+        android:textColor="@color/colorTextView"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="monospace"
         android:text="Login"
-        android:textColor="@color/black"
+        android:textColor="@color/colorTextView"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColorHint="#000000"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -62,7 +62,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="monospace"
         android:text="Login"
-        android:textColorHighlight="#FFFFFF"
+        android:textColorHighlight="@color/colorTextView"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="New here? Create an account?"
-        android:textColor="@color/black"
+        android:textColor="@color/colorTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="68dp"
         android:text="Forget password?"
-        android:textColor="#000000"
+        android:textColor="@color/colorTextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
