--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
         android:text="Pal Finder"
-        android:textColor="@color/black"
+        android:textColor="@color/colorTextView"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,8 @@
         android:layout_marginTop="8dp"
         android:fontFamily="monospace"
         android:text="Sign up page"
-        android:textColor="@color/black"
+        android:textColor="@color/colorTextView"
+        android:textColorHint="@color/colorTextView"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +106,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="monospace"
         android:text="Register"
-        android:textColorHighlight="#FFFFFF"
+        android:textColorHighlight="@color/colorTextView"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Already Registered ? Login Here"
-        android:textColor="@color/black"
+        android:textColor="@color/colorTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_button" />
